--- a/4thIR.SCompletePosT/_4thIR.SCompletePosT.Activities/Properties/Resources.resx
+++ b/4thIR.SCompletePosT/_4thIR.SCompletePosT.Activities/Properties/Resources.resx
@@ -145,4 +145,84 @@
     <value>Common</value>
     <comment>category</comment>
   </data>
+  <data name="Authentication_Category" xml:space="preserve">
+    <value>Authentication</value>
+    <comment>category</comment>
+  </data>
+  <data name="Common_Category" xml:space="preserve">
+    <value>Common</value>
+    <comment>category</comment>
+  </data>
+  <data name="Input_Category" xml:space="preserve">
+    <value>Input</value>
+    <comment>category</comment>
+  </data>
+  <data name="Output_Category" xml:space="preserve">
+    <value>Output</value>
+    <comment>category</comment>
+  </data>
+  <data name="Options_Category" xml:space="preserve">
+    <value>Options</value>
+    <comment>category</comment>
+  </data>
+  <data name="ValidationScope_Error" xml:space="preserve">
+    <value>Cannot be used outside of a {0}.</value>
+    <comment>error message; {0} is a container activity (e.g. a scope)</comment>
+  </data>
+  <data name="ValidationValue_Error" xml:space="preserve">
+    <value>Please provide a value for {0}.</value>
+    <comment>error message; {0} is the name of a missing property</comment>
+  </data>
+  <data name="ValidationExclusiveProperties_Error" xml:space="preserve">
+    <value>Please provide a value either for {0} or {1}, but not both.</value>
+    <comment>error message; {0} &amp; {1} are mutually exclusive activities</comment>
+  </data>
+  <data name="ValidationOverloadGroup_Error" xml:space="preserve">
+    <value>Please provide values for both {0} and {1}.</value>
+    <comment>error message; {0} &amp; {1} are complementary properties</comment>
+  </data>
+  <data name="TextCompletion_DisplayName" xml:space="preserve">
+    <value>Text Completion</value>
+    <comment>activity name</comment>
+  </data>
+  <data name="TextCompletion_Description" xml:space="preserve">
+    <value>Completes incomplete text/sentences.</value>
+    <comment>activity description</comment>
+  </data>
+  <data name="TextCompletion_IncompleteText_DisplayName" xml:space="preserve">
+    <value>Incomplete Text</value>
+    <comment>property name</comment>
+  </data>
+  <data name="TextCompletion_IncompleteText_Description" xml:space="preserve">
+    <value>The incomplete text.</value>
+    <comment>property description</comment>
+  </data>
+  <data name="Input_Category" xml:space="preserve">
+    <value>Input</value>
+    <comment>category</comment>
+  </data>
+  <data name="TextCompletion_AddedText_DisplayName" xml:space="preserve">
+    <value>Added Text</value>
+    <comment>property name</comment>
+  </data>
+  <data name="TextCompletion_AddedText_Description" xml:space="preserve">
+    <value>The text added.</value>
+    <comment>property description</comment>
+  </data>
+  <data name="Output_Category" xml:space="preserve">
+    <value>Output</value>
+    <comment>category</comment>
+  </data>
+  <data name="TextCompletion_CompleteText_DisplayName" xml:space="preserve">
+    <value>Complete Text</value>
+    <comment>property name</comment>
+  </data>
+  <data name="TextCompletion_CompleteText_Description" xml:space="preserve">
+    <value>The completed text.</value>
+    <comment>property description</comment>
+  </data>
+  <data name="Output_Category" xml:space="preserve">
+    <value>Output</value>
+    <comment>category</comment>
+  </data>
 </root>
