--- a/4thIR.QAnswerLA/_4thIR.QAnswerLA.Activities/Properties/Resources.resx
+++ b/4thIR.QAnswerLA/_4thIR.QAnswerLA.Activities/Properties/Resources.resx
@@ -145,4 +145,120 @@
     <value>Common</value>
     <comment>category</comment>
   </data>
+  <data name="Authentication_Category" xml:space="preserve">
+    <value>Authentication</value>
+    <comment>category</comment>
+  </data>
+  <data name="Common_Category" xml:space="preserve">
+    <value>Common</value>
+    <comment>category</comment>
+  </data>
+  <data name="Input_Category" xml:space="preserve">
+    <value>Input</value>
+    <comment>category</comment>
+  </data>
+  <data name="Output_Category" xml:space="preserve">
+    <value>Output</value>
+    <comment>category</comment>
+  </data>
+  <data name="Options_Category" xml:space="preserve">
+    <value>Options</value>
+    <comment>category</comment>
+  </data>
+  <data name="ValidationScope_Error" xml:space="preserve">
+    <value>Cannot be used outside of a {0}.</value>
+    <comment>error message; {0} is a container activity (e.g. a scope)</comment>
+  </data>
+  <data name="ValidationValue_Error" xml:space="preserve">
+    <value>Please provide a value for {0}.</value>
+    <comment>error message; {0} is the name of a missing property</comment>
+  </data>
+  <data name="ValidationExclusiveProperties_Error" xml:space="preserve">
+    <value>Please provide a value either for {0} or {1}, but not both.</value>
+    <comment>error message; {0} &amp; {1} are mutually exclusive activities</comment>
+  </data>
+  <data name="ValidationOverloadGroup_Error" xml:space="preserve">
+    <value>Please provide values for both {0} and {1}.</value>
+    <comment>error message; {0} &amp; {1} are complementary properties</comment>
+  </data>
+  <data name="QuestionAnswering_DisplayName" xml:space="preserve">
+    <value>Question Answering</value>
+    <comment>activity name</comment>
+  </data>
+  <data name="QuestionAnswering_Description" xml:space="preserve">
+    <value>Answers questions based on the context provided by an image.</value>
+    <comment>activity description</comment>
+  </data>
+  <data name="QuestionAnswering_ImageContextPath_DisplayName" xml:space="preserve">
+    <value>Image Context Path</value>
+    <comment>property name</comment>
+  </data>
+  <data name="QuestionAnswering_ImageContextPath_Description" xml:space="preserve">
+    <value>Full path to the image that provides the context.</value>
+    <comment>property description</comment>
+  </data>
+  <data name="Input_Category" xml:space="preserve">
+    <value>Input</value>
+    <comment>category</comment>
+  </data>
+  <data name="QuestionAnswering_Question_DisplayName" xml:space="preserve">
+    <value>Question</value>
+    <comment>property name</comment>
+  </data>
+  <data name="QuestionAnswering_Question_Description" xml:space="preserve">
+    <value>The question being asked.</value>
+    <comment>property description</comment>
+  </data>
+  <data name="Input_Category" xml:space="preserve">
+    <value>Input</value>
+    <comment>category</comment>
+  </data>
+  <data name="QuestionAnswering_Answer_DisplayName" xml:space="preserve">
+    <value>Answer</value>
+    <comment>property name</comment>
+  </data>
+  <data name="QuestionAnswering_Answer_Description" xml:space="preserve">
+    <value>The answer to the question.</value>
+    <comment>property description</comment>
+  </data>
+  <data name="Output_Category" xml:space="preserve">
+    <value>Output</value>
+    <comment>category</comment>
+  </data>
+  <data name="QuestionAnswering_Score_DisplayName" xml:space="preserve">
+    <value>Score</value>
+    <comment>property name</comment>
+  </data>
+  <data name="QuestionAnswering_Score_Description" xml:space="preserve">
+    <value>The accuracy of the answer.</value>
+    <comment>property description</comment>
+  </data>
+  <data name="Output_Category" xml:space="preserve">
+    <value>Output</value>
+    <comment>category</comment>
+  </data>
+  <data name="QuestionAnswering_Start_DisplayName" xml:space="preserve">
+    <value>Start</value>
+    <comment>property name</comment>
+  </data>
+  <data name="QuestionAnswering_Start_Description" xml:space="preserve">
+    <value>The start region of the answer.</value>
+    <comment>property description</comment>
+  </data>
+  <data name="Output_Category" xml:space="preserve">
+    <value>Output</value>
+    <comment>category</comment>
+  </data>
+  <data name="QuestionAnswering_End_DisplayName" xml:space="preserve">
+    <value>End</value>
+    <comment>property name</comment>
+  </data>
+  <data name="QuestionAnswering_End_Description" xml:space="preserve">
+    <value>The end region of the answer.</value>
+    <comment>property description</comment>
+  </data>
+  <data name="Output_Category" xml:space="preserve">
+    <value>Output</value>
+    <comment>category</comment>
+  </data>
 </root>
