--- a/4thIR.PoseEstimateSH/_4thIR.PoseEstimateSH.Activities/Properties/Resources.resx
+++ b/4thIR.PoseEstimateSH/_4thIR.PoseEstimateSH.Activities/Properties/Resources.resx
@@ -145,4 +145,148 @@
     <value>Common</value>
     <comment>category</comment>
   </data>
+  <data name="Authentication_Category" xml:space="preserve">
+    <value>Authentication</value>
+    <comment>category</comment>
+  </data>
+  <data name="Input_Category" xml:space="preserve">
+    <value>Input</value>
+    <comment>category</comment>
+  </data>
+  <data name="Output_Category" xml:space="preserve">
+    <value>Output</value>
+    <comment>category</comment>
+  </data>
+  <data name="Options_Category" xml:space="preserve">
+    <value>Options</value>
+    <comment>category</comment>
+  </data>
+  <data name="ValidationScope_Error" xml:space="preserve">
+    <value>Cannot be used outside of a {0}.</value>
+    <comment>error message; {0} is a container activity (e.g. a scope)</comment>
+  </data>
+  <data name="ValidationValue_Error" xml:space="preserve">
+    <value>Please provide a value for {0}.</value>
+    <comment>error message; {0} is the name of a missing property</comment>
+  </data>
+  <data name="ValidationExclusiveProperties_Error" xml:space="preserve">
+    <value>Please provide a value either for {0} or {1}, but not both.</value>
+    <comment>error message; {0} &amp; {1} are mutually exclusive activities</comment>
+  </data>
+  <data name="ValidationOverloadGroup_Error" xml:space="preserve">
+    <value>Please provide values for both {0} and {1}.</value>
+    <comment>error message; {0} &amp; {1} are complementary properties</comment>
+  </data>
+  <data name="PoseEstimation_DisplayName" xml:space="preserve">
+    <value>Pose Estimation</value>
+    <comment>activity name</comment>
+  </data>
+  <data name="PoseEstimation_Description" xml:space="preserve">
+    <value>Detects human figures in images.</value>
+    <comment>activity description</comment>
+  </data>
+  <data name="PoseEstimation_FilePath_DisplayName" xml:space="preserve">
+    <value>File Path</value>
+    <comment>property name</comment>
+  </data>
+  <data name="PoseEstimation_FilePath_Description" xml:space="preserve">
+    <value>Full Path to the image file.</value>
+    <comment>property description</comment>
+  </data>
+  <data name="PoseEstimation_Threshold_DisplayName" xml:space="preserve">
+    <value>Threshold</value>
+    <comment>property name</comment>
+  </data>
+  <data name="PoseEstimation_Threshold_Description" xml:space="preserve">
+    <value>Maximum: 1</value>
+    <comment>property description</comment>
+  </data>
+  <data name="PoseEstimation_OutputPath_DisplayName" xml:space="preserve">
+    <value>Output Path</value>
+    <comment>property name</comment>
+  </data>
+  <data name="PoseEstimation_OutputPath_Description" xml:space="preserve">
+    <value>Full path to the output folder.</value>
+    <comment>property description</comment>
+  </data>
+  <data name="Authentication_Category" xml:space="preserve">
+    <value>Authentication</value>
+    <comment>category</comment>
+  </data>
+  <data name="Common_Category" xml:space="preserve">
+    <value>Common</value>
+    <comment>category</comment>
+  </data>
+  <data name="Input_Category" xml:space="preserve">
+    <value>Input</value>
+    <comment>category</comment>
+  </data>
+  <data name="Output_Category" xml:space="preserve">
+    <value>Output</value>
+    <comment>category</comment>
+  </data>
+  <data name="Options_Category" xml:space="preserve">
+    <value>Options</value>
+    <comment>category</comment>
+  </data>
+  <data name="ValidationScope_Error" xml:space="preserve">
+    <value>Cannot be used outside of a {0}.</value>
+    <comment>error message; {0} is a container activity (e.g. a scope)</comment>
+  </data>
+  <data name="ValidationValue_Error" xml:space="preserve">
+    <value>Please provide a value for {0}.</value>
+    <comment>error message; {0} is the name of a missing property</comment>
+  </data>
+  <data name="ValidationExclusiveProperties_Error" xml:space="preserve">
+    <value>Please provide a value either for {0} or {1}, but not both.</value>
+    <comment>error message; {0} &amp; {1} are mutually exclusive activities</comment>
+  </data>
+  <data name="ValidationOverloadGroup_Error" xml:space="preserve">
+    <value>Please provide values for both {0} and {1}.</value>
+    <comment>error message; {0} &amp; {1} are complementary properties</comment>
+  </data>
+  <data name="PoseEstimation_DisplayName" xml:space="preserve">
+    <value>Pose Estimation</value>
+    <comment>activity name</comment>
+  </data>
+  <data name="PoseEstimation_Description" xml:space="preserve">
+    <value>Detects human figures in images.</value>
+    <comment>activity description</comment>
+  </data>
+  <data name="PoseEstimation_FilePath_DisplayName" xml:space="preserve">
+    <value>File Path</value>
+    <comment>property name</comment>
+  </data>
+  <data name="PoseEstimation_FilePath_Description" xml:space="preserve">
+    <value>Full path to the image file.</value>
+    <comment>property description</comment>
+  </data>
+  <data name="Input_Category" xml:space="preserve">
+    <value>Input</value>
+    <comment>category</comment>
+  </data>
+  <data name="PoseEstimation_Threshold_DisplayName" xml:space="preserve">
+    <value>Threshold</value>
+    <comment>property name</comment>
+  </data>
+  <data name="PoseEstimation_Threshold_Description" xml:space="preserve">
+    <value>Maximum: 1</value>
+    <comment>property description</comment>
+  </data>
+  <data name="Input_Category" xml:space="preserve">
+    <value>Input</value>
+    <comment>category</comment>
+  </data>
+  <data name="PoseEstimation_OutputFolder_DisplayName" xml:space="preserve">
+    <value>Output Folder</value>
+    <comment>property name</comment>
+  </data>
+  <data name="PoseEstimation_OutputFolder_Description" xml:space="preserve">
+    <value>Full path to the output folder.</value>
+    <comment>property description</comment>
+  </data>
+  <data name="Input_Category" xml:space="preserve">
+    <value>Input</value>
+    <comment>category</comment>
+  </data>
 </root>
