--- a/Language_Translation_Openvino/4thIR.LTranslate/_4thIR.LTranslate.Activities/Properties/Resources.resx
+++ b/Language_Translation_Openvino/4thIR.LTranslate/_4thIR.LTranslate.Activities/Properties/Resources.resx
@@ -145,4 +145,84 @@
     <value>Common</value>
     <comment>category</comment>
   </data>
+  <data name="Authentication_Category" xml:space="preserve">
+    <value>Authentication</value>
+    <comment>category</comment>
+  </data>
+  <data name="Common_Category" xml:space="preserve">
+    <value>Common</value>
+    <comment>category</comment>
+  </data>
+  <data name="Input_Category" xml:space="preserve">
+    <value>Input</value>
+    <comment>category</comment>
+  </data>
+  <data name="Output_Category" xml:space="preserve">
+    <value>Output</value>
+    <comment>category</comment>
+  </data>
+  <data name="Options_Category" xml:space="preserve">
+    <value>Options</value>
+    <comment>category</comment>
+  </data>
+  <data name="ValidationScope_Error" xml:space="preserve">
+    <value>Cannot be used outside of a {0}.</value>
+    <comment>error message; {0} is a container activity (e.g. a scope)</comment>
+  </data>
+  <data name="ValidationValue_Error" xml:space="preserve">
+    <value>Please provide a value for {0}.</value>
+    <comment>error message; {0} is the name of a missing property</comment>
+  </data>
+  <data name="ValidationExclusiveProperties_Error" xml:space="preserve">
+    <value>Please provide a value either for {0} or {1}, but not both.</value>
+    <comment>error message; {0} &amp; {1} are mutually exclusive activities</comment>
+  </data>
+  <data name="ValidationOverloadGroup_Error" xml:space="preserve">
+    <value>Please provide values for both {0} and {1}.</value>
+    <comment>error message; {0} &amp; {1} are complementary properties</comment>
+  </data>
+  <data name="TextTranslation_DisplayName" xml:space="preserve">
+    <value>Text Translation</value>
+    <comment>activity name</comment>
+  </data>
+  <data name="TextTranslation_Description" xml:space="preserve">
+    <value>Converts text from one language to another.</value>
+    <comment>activity description</comment>
+  </data>
+  <data name="TextTranslation_Sentences_DisplayName" xml:space="preserve">
+    <value>Sentences</value>
+    <comment>property name</comment>
+  </data>
+  <data name="TextTranslation_Sentences_Description" xml:space="preserve">
+    <value>The text to be translated.</value>
+    <comment>property description</comment>
+  </data>
+  <data name="Input_Category" xml:space="preserve">
+    <value>Input</value>
+    <comment>category</comment>
+  </data>
+  <data name="TextTranslation_TranslationType_DisplayName" xml:space="preserve">
+    <value>Translation Type</value>
+    <comment>property name</comment>
+  </data>
+  <data name="TextTranslation_TranslationType_Description" xml:space="preserve">
+    <value>TranslationType.Conversion</value>
+    <comment>property description</comment>
+  </data>
+  <data name="Input_Category" xml:space="preserve">
+    <value>Input</value>
+    <comment>category</comment>
+  </data>
+  <data name="TextTranslation_TranslatedSentences_DisplayName" xml:space="preserve">
+    <value>Translated Sentences</value>
+    <comment>property name</comment>
+  </data>
+  <data name="TextTranslation_TranslatedSentences_Description" xml:space="preserve">
+    <value>The translated text.</value>
+    <comment>property description</comment>
+  </data>
+  <data name="Output_Category" xml:space="preserve">
+    <value>Output</value>
+    <comment>category</comment>
+  </data>
 </root>
