--- a/Text_Comparison_All_MPnet_Base_v2/4thIR.TextComparison/_4thIR.TextComparison.Activities/Properties/Resources.resx
+++ b/Text_Comparison_All_MPnet_Base_v2/4thIR.TextComparison/_4thIR.TextComparison.Activities/Properties/Resources.resx
@@ -145,4 +145,84 @@
     <value>Common</value>
     <comment>category</comment>
   </data>
+  <data name="Authentication_Category" xml:space="preserve">
+    <value>Authentication</value>
+    <comment>category</comment>
+  </data>
+  <data name="Common_Category" xml:space="preserve">
+    <value>Common</value>
+    <comment>category</comment>
+  </data>
+  <data name="Input_Category" xml:space="preserve">
+    <value>Input</value>
+    <comment>category</comment>
+  </data>
+  <data name="Output_Category" xml:space="preserve">
+    <value>Output</value>
+    <comment>category</comment>
+  </data>
+  <data name="Options_Category" xml:space="preserve">
+    <value>Options</value>
+    <comment>category</comment>
+  </data>
+  <data name="ValidationScope_Error" xml:space="preserve">
+    <value>Cannot be used outside of a {0}.</value>
+    <comment>error message; {0} is a container activity (e.g. a scope)</comment>
+  </data>
+  <data name="ValidationValue_Error" xml:space="preserve">
+    <value>Please provide a value for {0}.</value>
+    <comment>error message; {0} is the name of a missing property</comment>
+  </data>
+  <data name="ValidationExclusiveProperties_Error" xml:space="preserve">
+    <value>Please provide a value either for {0} or {1}, but not both.</value>
+    <comment>error message; {0} &amp; {1} are mutually exclusive activities</comment>
+  </data>
+  <data name="ValidationOverloadGroup_Error" xml:space="preserve">
+    <value>Please provide values for both {0} and {1}.</value>
+    <comment>error message; {0} &amp; {1} are complementary properties</comment>
+  </data>
+  <data name="TextComparison_DisplayName" xml:space="preserve">
+    <value>Text Comparison</value>
+    <comment>activity name</comment>
+  </data>
+  <data name="TextComparison_Description" xml:space="preserve">
+    <value>Compares input sentences to the provided source text.</value>
+    <comment>activity description</comment>
+  </data>
+  <data name="TextComparison_SourceText_DisplayName" xml:space="preserve">
+    <value>Source Text</value>
+    <comment>property name</comment>
+  </data>
+  <data name="TextComparison_SourceText_Description" xml:space="preserve">
+    <value>The source text.</value>
+    <comment>property description</comment>
+  </data>
+  <data name="Input_Category" xml:space="preserve">
+    <value>Input</value>
+    <comment>category</comment>
+  </data>
+  <data name="TextComparison_Sentences_DisplayName" xml:space="preserve">
+    <value>Sentences</value>
+    <comment>property name</comment>
+  </data>
+  <data name="TextComparison_Sentences_Description" xml:space="preserve">
+    <value>The sentences to be compared.</value>
+    <comment>property description</comment>
+  </data>
+  <data name="Input_Category" xml:space="preserve">
+    <value>Input</value>
+    <comment>category</comment>
+  </data>
+  <data name="TextComparison_Comparisons_DisplayName" xml:space="preserve">
+    <value>Comparisons</value>
+    <comment>property name</comment>
+  </data>
+  <data name="TextComparison_Comparisons_Description" xml:space="preserve">
+    <value>The results of the comparison.</value>
+    <comment>property description</comment>
+  </data>
+  <data name="Output_Category" xml:space="preserve">
+    <value>Output</value>
+    <comment>category</comment>
+  </data>
 </root>
