--- a/Sentence_Transformer_MiniLM_Base_V2_Sentence_Similarity/4thIR.TextParaphraseComparer/_4thIR.TextParaphraseComparer.Activities/Properties/Resources.resx
+++ b/Sentence_Transformer_MiniLM_Base_V2_Sentence_Similarity/4thIR.TextParaphraseComparer/_4thIR.TextParaphraseComparer.Activities/Properties/Resources.resx
@@ -145,4 +145,84 @@
     <value>Common</value>
     <comment>category</comment>
   </data>
+  <data name="Authentication_Category" xml:space="preserve">
+    <value>Authentication</value>
+    <comment>category</comment>
+  </data>
+  <data name="Common_Category" xml:space="preserve">
+    <value>Common</value>
+    <comment>category</comment>
+  </data>
+  <data name="Input_Category" xml:space="preserve">
+    <value>Input</value>
+    <comment>category</comment>
+  </data>
+  <data name="Output_Category" xml:space="preserve">
+    <value>Output</value>
+    <comment>category</comment>
+  </data>
+  <data name="Options_Category" xml:space="preserve">
+    <value>Options</value>
+    <comment>category</comment>
+  </data>
+  <data name="ValidationScope_Error" xml:space="preserve">
+    <value>Cannot be used outside of a {0}.</value>
+    <comment>error message; {0} is a container activity (e.g. a scope)</comment>
+  </data>
+  <data name="ValidationValue_Error" xml:space="preserve">
+    <value>Please provide a value for {0}.</value>
+    <comment>error message; {0} is the name of a missing property</comment>
+  </data>
+  <data name="ValidationExclusiveProperties_Error" xml:space="preserve">
+    <value>Please provide a value either for {0} or {1}, but not both.</value>
+    <comment>error message; {0} &amp; {1} are mutually exclusive activities</comment>
+  </data>
+  <data name="ValidationOverloadGroup_Error" xml:space="preserve">
+    <value>Please provide values for both {0} and {1}.</value>
+    <comment>error message; {0} &amp; {1} are complementary properties</comment>
+  </data>
+  <data name="TextComparison_DisplayName" xml:space="preserve">
+    <value>Text Comparison</value>
+    <comment>activity name</comment>
+  </data>
+  <data name="TextComparison_Description" xml:space="preserve">
+    <value>Determines the similarity between paraphrased sentences.</value>
+    <comment>activity description</comment>
+  </data>
+  <data name="TextComparison_SentencesA_DisplayName" xml:space="preserve">
+    <value>Sentences A</value>
+    <comment>property name</comment>
+  </data>
+  <data name="TextComparison_SentencesA_Description" xml:space="preserve">
+    <value>First array of sentences.</value>
+    <comment>property description</comment>
+  </data>
+  <data name="Input_Category" xml:space="preserve">
+    <value>Input</value>
+    <comment>category</comment>
+  </data>
+  <data name="TextComparison_SentencesB_DisplayName" xml:space="preserve">
+    <value>Sentences B</value>
+    <comment>property name</comment>
+  </data>
+  <data name="TextComparison_SentencesB_Description" xml:space="preserve">
+    <value>Second array of sentences.</value>
+    <comment>property description</comment>
+  </data>
+  <data name="Input_Category" xml:space="preserve">
+    <value>Input</value>
+    <comment>category</comment>
+  </data>
+  <data name="TextComparison_Comparisons_DisplayName" xml:space="preserve">
+    <value>Comparisons</value>
+    <comment>property name</comment>
+  </data>
+  <data name="TextComparison_Comparisons_Description" xml:space="preserve">
+    <value>The result of the analysis.</value>
+    <comment>property description</comment>
+  </data>
+  <data name="Output_Category" xml:space="preserve">
+    <value>Output</value>
+    <comment>category</comment>
+  </data>
 </root>
