--- a/Sentence_Transformer_MiniLM_Base_V2_Sentence_Similarity/4thIR.SentenceTransformMB/_4thIR.SentenceTransformMB.Activities.Design/Properties/Resources.resx
+++ b/Sentence_Transformer_MiniLM_Base_V2_Sentence_Similarity/4thIR.SentenceTransformMB/_4thIR.SentenceTransformMB.Activities.Design/Properties/Resources.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Category" xml:space="preserve">
-    <value>4th-IR.Text Comparison.MiniLM Base.V2</value>
+    <value>_4thIR.SentenceTransformMB</value>
     <comment>category</comment>
   </data>
   <data name="Collection" xml:space="preserve">
