--- a/4thIR.Custom/4thIR.Custom/_4thIR.Custom.Activities/Properties/Resources.resx
+++ b/4thIR.Custom/4thIR.Custom/_4thIR.Custom.Activities/Properties/Resources.resx
@@ -329,4 +329,28 @@
     <value>Array containing detection classes.</value>
     <comment>property description</comment>
   </data>
+  <data name="ImageClassificationCV_DisplayName" xml:space="preserve">
+    <value>Image Classification</value>
+    <comment>activity name</comment>
+  </data>
+  <data name="ImageClassificationCV_Description" xml:space="preserve">
+    <value>Performs classification of images.</value>
+    <comment>activity description</comment>
+  </data>
+  <data name="ImageClassificationCV_Path_DisplayName" xml:space="preserve">
+    <value>Path</value>
+    <comment>property name</comment>
+  </data>
+  <data name="ImageClassificationCV_Path_Description" xml:space="preserve">
+    <value>Full path to the image file.</value>
+    <comment>property description</comment>
+  </data>
+  <data name="ImageClassificationCV_Label_DisplayName" xml:space="preserve">
+    <value>Label</value>
+    <comment>property name</comment>
+  </data>
+  <data name="ImageClassificationCV_Label_Description" xml:space="preserve">
+    <value>The result of the image classification.</value>
+    <comment>property description</comment>
+  </data>
 </root>
